--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -33,20 +33,9 @@
                         {% endif %}
                     </div>
                     <div class="form-group">
-                        <label for="id_username">Usuário</label>
-                        {{ form.username }}
-                        {% if form.username.errors %}
-                            <ul class="errorlist">
-                                {% for error in form.username.errors %}
-                                    <li>{{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
                         <label for="id_password1">Senha</label>
                         {{ form.password1 }}
-                        {% if form.password1.errors %}
+                        {% if form.email.errors %}
                             <ul class="errorlist">
                                 {% for error in form.password1.errors %}
                                     <li>{{ error }}</li>
